client/scss/imports/example-datasets.scss
.copy-link,
.open-desktop {
  display: inline-block;
  white-space: nowrap;
  svg {
    max-width: 1em;
    height: 1em;
    fill: currentColor;
    vertical-align: -9%;
  }
}

.example {
  display: flex;
  flex-direction: column;
  height: calc(100% - 3rem);
  margin-bottom: 3rem;
  box-shadow: 0 0 30px rgba(0,0,0,.15);
}

.example-header {
  height: 10rem;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: $color-blue;
  flex-grow: 0;
  flex-shrink: 1;
}

.example-body {
  background: $color-white;
  padding: 1.5rem 2rem 0;
  flex-grow: 1;
  flex-shrink: 0;
}

.example-footer {
  background: $color-white;
  padding: .5rem 2rem 2rem;
  flex-grow: 0;
  flex-shrink: 1;
  .copy-link,
  .open-desktop {
    display: inline-block;
    font-size: .75rem;
  }
}

.example-header--california {
  background: $color-red;
}

.example-header--nasa {
  background: $color-blue;
  .example-img {
    max-width: 10rem;
  }
}

.example-header--eop {
  background: $color-blue;
  .example-img {
    max-width: 9rem;
    width: 9rem;
    height: 9rem;
  }
}

.example-header--osm {
  background: $color-blue;
  position: relative;
  .example-img {
    max-width: 500%;
    position: absolute;
    left: -40%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
  }
}

.example-header--densho {
  background: $color-neutral;
}

.example-img {
  display: block;
  width: 100%;
  max-width: 7rem;
  margin: 0 auto;
  flex-grow: 0;
}

